--- a/usecustomhook/src/index.css
+++ b/usecustomhook/src/index.css
@@ -1,13 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.joke {
+  font-weight: 700;
+  font-size: large;
+  font-family: serif;
+  width: max-content;
+  max-width: 75%;
+  margin: 0 auto;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 6px #1a1a1a5b;
+  transition: all ease-in-out 0.3s;
+}
+
+.joke:hover {
+  box-shadow: 0 6px 8px #1a1a1a5b;
+}
+
+.joke__box {
+  width: 100%;
 }
